--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,37 +1,37 @@
-<div class="container-fluid p-3 my-3">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<div class="container-md p-3 my-3">
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource">
+      <!-- ID Column -->
+      <ng-container matColumnDef="portfolioId">
+        <th mat-header-cell *matHeaderCellDef> ID. </th>
+        <td mat-cell *matCellDef="let element"> {{element.portfolioId}} </td>
+      </ng-container>
+    
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef> Symbol </th>
+        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      </ng-container>
+    
+      <!-- Stock Name Column -->
+      <ng-container matColumnDef="stockName">
+        <th mat-header-cell *matHeaderCellDef> StockName </th>
+        <td mat-cell *matCellDef="let element"> {{element.stockName}} </td>
+      </ng-container>
+    
+      <!-- Last Price Column -->
+      <ng-container matColumnDef="stockLastPrice">
+        <th mat-header-cell *matHeaderCellDef> Last Price </th>
+        <td mat-cell *matCellDef="let element"> {{element.stockLastPrice}} </td>
+      </ng-container>
+    
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-        <!--- Note that these columns can be defined in any order.
-              The actual rendered columns are set as a property on the row definition" -->
-      
-        <!-- Position Column -->
-        <ng-container matColumnDef="portfolioId">
-          <th mat-header-cell *matHeaderCellDef> ID. </th>
-          <td mat-cell *matCellDef="let element"> {{element.portfolioId}} </td>
-        </ng-container>
-      
-        <!-- Name Column -->
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef> Symbol </th>
-          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
-      
-        <!-- Weight Column -->
-        <ng-container matColumnDef="stockName">
-          <th mat-header-cell *matHeaderCellDef> StockName </th>
-          <td mat-cell *matCellDef="let element"> {{element.stockName}} </td>
-        </ng-container>
-      
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="stockLastPrice">
-          <th mat-header-cell *matHeaderCellDef> Last Price </th>
-          <td mat-cell *matCellDef="let element"> {{element.stockLastPrice}} </td>
-        </ng-container>
-      
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-      </table>
-    </div>   
+    </table>
+    <mat-paginator [pageSizeOptions]="[2, 4, 10]" showFirstLastButtons></mat-paginator>
+  </div>
+</div>   
       
       
       
