--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,35 +1,40 @@
 <div class="container-md p-3 my-3">
+  <div class="container-md p-2 my-2">
+    <div class="col-md-3">
+      <button mat-raised-button (click)=openDialog()>Create</button>
+    </div>
+  </div>
   <div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource">
+    <table mat-table [dataSource]="dataSource" matSort>
       <!-- ID Column -->
       <ng-container matColumnDef="portfolioId">
-        <th mat-header-cell *matHeaderCellDef> ID. </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID. </th>
         <td mat-cell *matCellDef="let element"> {{element.portfolioId}} </td>
       </ng-container>
     
       <!-- Symbol Column -->
       <ng-container matColumnDef="symbol">
-        <th mat-header-cell *matHeaderCellDef> Symbol </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
         <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
       </ng-container>
     
       <!-- Stock Name Column -->
       <ng-container matColumnDef="stockName">
-        <th mat-header-cell *matHeaderCellDef> StockName </th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> StockName </th>
         <td mat-cell *matCellDef="let element"> {{element.stockName}} </td>
       </ng-container>
     
       <!-- Last Price Column -->
       <ng-container matColumnDef="stockLastPrice">
-        <th mat-header-cell *matHeaderCellDef> Last Price </th>
-        <td mat-cell *matCellDef="let element"> {{element.stockLastPrice}} </td>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Price </th>
+        <td mat-cell *matCellDef="let element"> {{element.stockLastPrice | currency:'USD'}} </td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
     </table>
-    <mat-paginator [pageSizeOptions]="[2, 4, 10]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [pageSizeOptions]="[5, 10, 50]" showFirstLastButtons></mat-paginator>
   </div>
 </div>   
       
