--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,11 +1,45 @@
-<div class="container-md p-3 my-3">
+<div class="container p-3 my-3">
+  <div class="container p-3">
+    <div class="row">
+      <div class="col-md-2">
+        <mat-form-field>
+          <input matInput [formControl]="symbolFilter" (keyup)="applySymbolFilter($event.target.value)" placeholder="Symbol Filter">
+        </mat-form-field>
+      </div>
+      <div class="col-md-2">
+        <mat-form-field>
+          <input matInput [formControl]="stockNameFilter" (keyup)="applyStockNameFilter($event.target.value)" placeholder="Stock Name Filter">
+        </mat-form-field>
+      </div>
+    </div>
+  </div>
   <div class="container-md p-2 my-2">
-    <div class="col-md-3">
-      <button mat-raised-button (click)=openDialog()>Create</button>
+    <div class="row">
+      <div class="col-md-1">
+        <button mat-raised-button (click)="openDialog('add',{})">Create</button>
+      </div>
+      <div class="col-md-1" *ngIf="this.selection.selected.length > 0">
+        <button mat-raised-button (click)="removeSelectedRows()">Delete {{this.selection.selected.length}} of {{this.dataSource.data.length}} items</button>
+      </div>
     </div>
   </div>
   <div class="mat-elevation-z8">
     <table mat-table [dataSource]="dataSource" matSort>
+      <!-- Select Column -->
+      <ng-container matColumnDef="select">
+        <th mat-header-cell *matHeaderCellDef>
+          <mat-checkbox (change)="$event ? masterToggle() : null"
+                        [checked]="selection.hasValue() && isAllSelected()"
+                        [indeterminate]="selection.hasValue() && !isAllSelected()">
+          </mat-checkbox>
+        </th>
+        <td mat-cell *matCellDef="let row">
+          <mat-checkbox (click)="$event.stopPropagation()"
+                        (change)="$event ? selection.toggle(row) : null"
+                        [checked]="selection.isSelected(row)">
+          </mat-checkbox>
+        </td>
+      </ng-container>
       <!-- ID Column -->
       <ng-container matColumnDef="portfolioId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID. </th>
@@ -28,6 +62,15 @@
       <ng-container matColumnDef="stockLastPrice">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Last Price </th>
         <td mat-cell *matCellDef="let element"> {{element.stockLastPrice | currency:'USD'}} </td>
+      </ng-container>
+
+      <!-- Action Column -->
+      <ng-container matColumnDef="action">
+        <th mat-header-cell *matHeaderCellDef> Action </th>
+        <td mat-cell *matCellDef="let element" class="action-link"> 
+          <a (click)="openDialog('update',element)">Edit</a> | 
+          <a (click)="openDeleteDialog('delete',element)">Delete</a>  
+        </td>
       </ng-container>
     
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
