--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,19 +1,7 @@
 <div class="container p-3 my-3">
-  <div class="container p-3">
-    <div class="row">
-      <div class="col-md-2">
-        <mat-form-field>
-          <input matInput [formControl]="symbolFilter" (keyup)="applySymbolFilter($event.target.value)" placeholder="Symbol Filter">
-        </mat-form-field>
-      </div>
-      <div class="col-md-2">
-        <mat-form-field>
-          <input matInput [formControl]="stockNameFilter" (keyup)="applyStockNameFilter($event.target.value)" placeholder="Stock Name Filter">
-        </mat-form-field>
-        
-      </div>
-    </div>
-  </div>
+
+
+
   <div class="container-md p-2 my-2">
     <div class="row">
       <div class="col-md-1">
@@ -22,12 +10,41 @@
       <div class="col-md-1" *ngIf="this.selection.selected.length > 0">
         <button mat-raised-button (click)="removeSelectedRows()">Delete {{this.selection.selected.length}} of {{this.dataSource.data.length}} items</button>
       </div>
-      <div class="col-md-1">
-        <button mat-raised-button (click)="clear()">Clear Selection</button>
-      </div>
     </div>
   </div>
   <div class="mat-elevation-z8">
+    <mat-accordion class="example-headers-align">
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Filter
+          </mat-panel-title>
+          <mat-panel-description>
+            Click to expand 
+            <mat-icon>account_circle</mat-icon>
+          </mat-panel-description>
+          
+        </mat-expansion-panel-header>
+            <div>
+              <mat-form-field>
+                <input matInput [formControl]="symbolFilter" (keyup)="applySymbolFilter($event.target.value)" placeholder="Symbol Filter">
+              </mat-form-field>
+ 
+              <mat-form-field>
+                <input matInput [formControl]="stockNameFilter" (keyup)="applyStockNameFilter($event.target.value)" placeholder="Stock Name Filter">
+              </mat-form-field>
+            </div>
+            <div>
+              <mat-form-field>
+                <input matInput [formControl]="minPriceFilter" (keyup)="applyMinPriceFilter($event.target.value)" placeholder="Min Price">
+              </mat-form-field>
+ 
+              <mat-form-field>
+                <input matInput [formControl]="maxPriceFilter" (keyup)="applyMaxPriceFilter($event.target.value)" placeholder="Max Price">
+              </mat-form-field>
+            </div>
+      </mat-expansion-panel>
+    </mat-accordion>
     <table mat-table [dataSource]="dataSource" matSort>
       <!-- Select Column -->
       <ng-container matColumnDef="select">
@@ -59,7 +76,7 @@
       <!-- Stock Name Column -->
       <ng-container matColumnDef="stockName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> StockName </th>
-        <td mat-cell *matCellDef="let element"> {{element.stockName}} </td>
+        <td mat-cell *matCellDef="let element"> <a [routerLink]="['/viewDetailPortfolio',element.portfolioId]">{{element.stockName}}</a> </td>
       </ng-container>
     
       <!-- Last Price Column -->
