--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,23 @@
 .mat-sidenav {
     width: 300px;
   }
+
+  .loading {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+
+  .spinner {
+    position: absolute;
+    top: 10%;
+    left: 50%;
+    margin-top: -20px;
+    margin-left: -25px;
+    width: 100%;
+    height: 40px;
+    text-align: center;
+    font-size: 10px;
+  }
