--- a/src/app/ticker/view-detail-ticker/view-detail-ticker.component.html
+++ b/src/app/ticker/view-detail-ticker/view-detail-ticker.component.html
@@ -2,7 +2,7 @@ this is a place holder to contain DetailPortfolio and ViewTransaction
 
 <div class="container-md">
     <div>
-        <detail-portfolio></detail-portfolio>
+        <detail-ticker></detail-ticker>
     </div>
     <div>
         <view-transaction></view-transaction>
