--- a/src/app/ticker/portfolio.component.html
+++ b/src/app/ticker/portfolio.component.html
@@ -68,9 +68,9 @@
         </td>
       </ng-container>
       <!-- ID Column -->
-      <ng-container matColumnDef="portfolioId">
+      <ng-container matColumnDef="tickerId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> ID. </th>
-        <td mat-cell *matCellDef="let element"> {{element.portfolioId}} </td>
+        <td mat-cell *matCellDef="let element"> {{element.tickerId}} </td>
       </ng-container>
     
       <!-- Symbol Column -->
@@ -82,7 +82,7 @@
       <!-- Stock Name Column -->
       <ng-container matColumnDef="stockName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> StockName </th>
-        <td mat-cell *matCellDef="let element"> <a [routerLink]="['/viewDetailPortfolio',element.portfolioId]">{{element.stockName}}</a> </td>
+        <td mat-cell *matCellDef="let element"> <a [routerLink]="['/viewDetail',element.tickerId]">{{element.stockName}}</a> </td>
       </ng-container>
     
       <!-- Last Price Column -->
