--- a/src/app/transaction/view-transaction/view-transaction.component.html
+++ b/src/app/transaction/view-transaction/view-transaction.component.html
@@ -1,39 +1,46 @@
 this should create a gridview of transaction entry
 
 <div class="container-md">
-    <table mat-table [dataSource]="dataSource" matSort>
-        <!-- ID Column -->
-        <ng-container matColumnDef="transactionId">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> ID. </th>
-          <td mat-cell *matCellDef="let element"> {{element.transactionId}} </td>
-        </ng-container>
-      
-        <!-- Symbol Column -->
-        <ng-container matColumnDef="symbol">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
-          <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
-        </ng-container>
-      
-        <!-- Stock Name Column -->
-        <ng-container matColumnDef="stockName">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> StockName </th>
-          <td mat-cell *matCellDef="let element"> {{element.stockName}} </td>
-        </ng-container>
-      
-        <!-- Last Price Column -->
-        <ng-container matColumnDef="stockPurchasePrice">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header> Purchase Price </th>
-          <td mat-cell *matCellDef="let element"> {{element.stockPurchasePrice | currency:'USD'}} </td>
-        </ng-container>
+  <div class="container-md p-2 my-2">
+    <div class="row">
+      <div class="col-md-1">
+        <button mat-raised-button (click)="openDialog()">Create Transactions</button>
+      </div>
+    </div>
+  </div>
+  <table mat-table [dataSource]="dataSource" matSort>
+      <!-- ID Column -->
+      <ng-container matColumnDef="transactionId">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID. </th>
+        <td mat-cell *matCellDef="let element"> {{element.transactionId}} </td>
+      </ng-container>
+    
+      <!-- Symbol Column -->
+      <ng-container matColumnDef="symbol">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Symbol </th>
+        <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+      </ng-container>
+    
+      <!-- Stock Name Column -->
+      <ng-container matColumnDef="transactionType">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Transaction Type </th>
+        <td mat-cell *matCellDef="let element"> {{element.transactionType}} </td>
+      </ng-container>
+    
+      <!-- Last Price Column -->
+      <ng-container matColumnDef="stockPurchasePrice">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Price </th>
+        <td mat-cell *matCellDef="let element"> {{element.purchasePrice | currency:'USD'}} </td>
+      </ng-container>
 
-        <!-- Last Price Column -->
-        <ng-container matColumnDef="stockPurchaseQuantity">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Purchase Quantity </th>
-            <td mat-cell *matCellDef="let element"> {{element.stockPurchaseQuantity}} </td>
-        </ng-container>
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  
-      </table>
+      <!-- Last Price Column -->
+      <ng-container matColumnDef="stockPurchaseQuantity">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> Quantity </th>
+          <td mat-cell *matCellDef="let element"> {{element.purchaseQuantity}} </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
 </div>
