--- a/src/app/transaction/view-transaction/view-transaction.component.html
+++ b/src/app/transaction/view-transaction/view-transaction.component.html
@@ -39,6 +39,11 @@ this should create a gridview of transaction entry
           <td mat-cell *matCellDef="let element"> {{element.purchaseQuantity}} </td>
       </ng-container>
 
+      <ng-container matColumnDef="transactionDate">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Date </th>
+        <td mat-cell *matCellDef="let element"> {{element.transactionDate | date:'dd/MM/YYYY'}} </td>
+      </ng-container>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
