--- a/src/app/transaction/create-transaction/create-transaction.component.html
+++ b/src/app/transaction/create-transaction/create-transaction.component.html
@@ -9,8 +9,8 @@
 
     <mat-form-field class="form-element">
         <mat-select placeholder="TransactionType" formControlName="transactiontype">
-            <mat-option value="buy">Buy</mat-option>
-            <mat-option value="sell">Sell</mat-option>
+            <mat-option value="Buy">Buy</mat-option>
+            <mat-option value="Sell">Sell</mat-option>
         </mat-select>
     </mat-form-field>
     
